===v7.1.0===
 
 * IMPORTANT: WARLORDS BETA NOTES:
 ** The issue with Blizzard's SavedVariables serializer has been resolved in beta build 18663. You may still have a great deal of corrupt data, so I recommend re-importing your profiles from live servers if you notice anything that is unexplainably broken.
 ** Blizzard's built-in cooldown text is very, very broken at the moment, although it is now supported by TMW. If it doesn't show up on some icons, get OmniCC and wait for Blizz to fix it.

 * Buff/Debuff equivalencies have been updated (with the exception of diminishing returns). Please open a ticket if you notice anything missing or mis-categorized.

 * New conditions
 ** Instance Size
 ** Zone PvP Type
 
 * The suggestion list now defers its sorting so that input is more responsive.
 * The "Highlight timer edge" setting is back.

====Bug Fixes====
 * Fixed yet another issue with ElvUI's timer texts (they weren't going away when they should have been).


===v7.0.3===
 * Re-worked the Instance Type condition to make it more extensible in the future, and also added a few missing instance types to it.
 * Added a Unit Specialization condition that can check the specs of enemies in arenas, and all units in battlegrounds.
 
====Bug Fixes====
 * Fixed an error that would be thrown if the whisper target ended up evaluating to nil.
 * TellMeWhen now duplicates Blizzard's code for the spell activation overlay (and has some additional code to get this to play nicely with Masque) so that it should hopefully no longer get blamed for tainting your action bars.
 * TellMeWhen also now duplicates Blizzard's code for dropdown menus, and improves upon it slightly. This should also help with taint issues.

===v7.0.2===
====Bug Fixes====
 * Fixed the missing slider value text for the Unit Level condition.
 * The Haste conditions no longer have a hard cap of 100%.
 * Fixed a false error that would display during configuring while using the [Range] DogTag.